@@ -29,10 +29,13 @@ import io.github.pulsebeat02.ezmediacore.MediaLibraryCore;
 import io.github.pulsebeat02.ezmediacore.executor.ExecutorProvider;
 import io.github.pulsebeat02.ezmediacore.player.FrameConfiguration;
 import java.io.IOException;
-import java.io.InputStream;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.nio.file.Path;
+import java.time.Duration;
 import java.util.Locale;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
@@ -46,6 +49,7 @@ public final class MediaExtractionUtils {
   private static final Pattern YOUTUBE_ID_PATTERN;
   private static final String YOUTUBE_SEARCH_URL;
   private static final String SEARCH_KEYWORD;
+  private static final HttpClient HTTP_CLIENT;
 
   static {
     CACHED_RESULT =
@@ -57,6 +61,7 @@ public final class MediaExtractionUtils {
     YOUTUBE_ID_PATTERN = Pattern.compile("(?<=youtu.be/|watch\\?v=|/videos/|embed)[^#]*");
     YOUTUBE_SEARCH_URL = "https://www.youtube.com/results?search_query=%s";
     SEARCH_KEYWORD = "videoId";
+    HTTP_CLIENT = HttpClient.newBuilder().connectTimeout(Duration.ofSeconds(10)).build();
   }
 
   private MediaExtractionUtils() {
@@ -104,13 +109,13 @@ public final class MediaExtractionUtils {
 
   @NotNull
   private static Optional<String> getFirstResultVideoInternal(@NotNull final String query)
-      throws IOException {
-    try (final InputStream in =
-        new URL(YOUTUBE_SEARCH_URL.formatted(query.replaceAll(" ", "+"))).openStream()) {
-      final String content = new String(in.readAllBytes(), StandardCharsets.UTF_8);
-      final int start = FastStringUtils.fastQuerySearch(content, SEARCH_KEYWORD) + 10;
-      return Optional.of(content.substring(start, content.indexOf('"', start)));
-    }
+      throws IOException, URISyntaxException, InterruptedException {
+    final String content = HTTP_CLIENT.send(
+        HttpRequest.newBuilder()
+            .uri(new URI(query.replaceAll(" ", "+")))
+            .build(), HttpResponse.BodyHandlers.ofString()).body();
+    final int start = FastStringUtils.fastQuerySearch(content, SEARCH_KEYWORD) + 10;
+    return Optional.of(content.substring(start, content.indexOf('"', start)));
   }
 
   @NotNull
